repos/ytarchive/deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ytarchive
  labels:
    app.kubernetes.io/name: ytarchive
    app.kubernetes.io/part-of: ytarchive
